fixed colour in dark mode bug

--- a/src/components/ShoppingLists.css
+++ b/src/components/ShoppingLists.css
@@ -79,6 +79,8 @@ body.light {
   
 
 .edit-input {
+  font-family: 'Montserrat', sans-serif; 
+    font-weight: bold;
     width: 100%;
     padding: 8px;
     border: 2px solid #ccc;
@@ -87,6 +89,7 @@ body.light {
     background-color: #fff;
     color: #333;
     transition: all 0.3s ease;
+    
   }
   
 
